# Qdrant-Hybrid-Search-Implementation-Workflow

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AR_output.xlsx  AZ_output.xlsx  CA_output.xlsx  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  README_EXTRACTION.md  all_states_results.xlsx  batch_convert_state_plans.py  convert_results.py  ffpsa-extraction-plan.md  fix_json_encoding.py  json_to_excel.py  llamaparse_converter.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml  docker.yml
State_Plans_Markdown/: AR_PreventionPlan.md  CA_PreventionPlan.md  CO_PreventionPlan.md  CT_PreventionPlan.md  DC_PreventionPlan.md  FL_PreventionPlan.md
config/: extraction_config.json
data/output/extracted/: AR_extraction.json  AR_quality_report.json  AZ_extraction.json  AZ_quality_report.json  CA_extraction.json  CA_quality_report.json  CT_extraction.json
data/output/reports/: extraction_detailed.csv  extraction_report.txt  extraction_summary.csv
src/: __init__.py  document_processor.py  embed_cloud.py  embed_local.py  extraction_engine.py  improved-extraction-prompts.py  llm_processor.py  pipeline.py  pipeline_core.py  prompt_manager.py  prompts.py  requirements.txt  utils.py  validation_models.py  validators.py
src/Prompts/BM25/: CandidateDefinition_BM25.md  CommunityEngagement_BM25.md  EligibilityDetermination_BM25.md  EquityDisparity_BM25.md  EvaluationMetrics_BM25.md  FundingSources_BM25.md  MonitoringAccountability_BM25.md  NonReimbursablePrograms_BM25.md  PreventionPrograms_BM25.md  StructuralDeterminants_BM25.md  TargetPopulations_BM25.md  TraumaInformed_BM25.md  TribalConsultation_BM25.md  WorkforceSupport_BM25.md
src/Prompts/LLM/: CandidateDefinition_LLM_Prompt.md  CommunityEngagement_LLM_Prompt.md  EligibilityDetermination_LLM_Prompt.md  EquityDisparity_LLM_Prompt.md  EvaluationMetrics_LLM_Prompt.md  FundingSources_LLM_Prompt.md  MonitoringAccountability_LLM_Prompt.md  NonReimbursablePrograms_LLM_Prompt.md  PreventionPrograms_LLM_Prompt.md  StructuralDeterminants_LLM_Prompt.md  TargetPopulations_LLM_Prompt.md  TraumaInformed_LLM_Prompt.md  TribalConsultation_LLM_Prompt.md  WorkforceSupport_LLM_Prompt.md
src/Prompts/RAG/: CandidateDefinition_RAG.md  CommunityEngagement_RAG.md  EligibilityDetermination_RAG.md  EquityDisparity_RAG.md  EvaluationMetrics_RAG.md  FundingSources_RAG.md  MonitoringAccountability_RAG.md  NonReimbursablePrograms_RAG.md  PreventionPrograms_RAG.md  StructuralDeterminants_RAG.md  TargetPopulations_RAG.md  (+3 more)
src/config/: config.py
src/multi_state_output_standardized/: overall_summary.json
src/utils/: regenerate_combined_files.py  standardize_empty_arrays.py  verify_state_coverage.py
states/: AZ_PreventionPlan.md  CA_PreventionPlan.md  CO_PreventionPlan.md  CT_PreventionPlan.md  DC_PreventionPlan.md  FL_PreventionPlan.md  GA_PreventionPlan.md  HI_PreventionPlan.md  IA_PreventionPlan.md  ID_PreventionPlan.md  IL_PreventionPlan.md  IN_PreventionPlan.md  KS_PreventionPlan.md  KY_PreventionPlan.md  LA_PreventionPlan.md  MA_PreventionPlan.md  MD_PreventionPlan.md  ME_PreventionPlan.md  MI_PreventionPlan.md  MN_PreventionPlan.md  MO_PreventionPlan.md  MT_PreventionPlan.md  NC_PreventionPlan.md  ND_PreventionPlan.md  NE_PreventionPlan.md  NH_PreventionPlan.md  NV_PreventionPlan.md  NY_PreventionPlan.md  OH_PreventionPlan.md  OK_PreventionPlan.md  OR_PreventionPlan.md  PA_PreventionPlan.md  PR_PreventionPlan.md  RI_PreventionPlan.md  SC_PreventionPlan.md  UT_PreventionPlan.md  VA_PreventionPlan.md  VT_PreventionPlan.md  WA_PreventionPlan.md  WI_PreventionPlan.md  (+1 more)
tests/: __init__.py  conftest.py
tests/integration/: test_pipeline.py
tests/unit/: test_prompt_manager.py  test_validation_models.py
(+85 files in other folders)
